erDiagram
    USERS {
        uuid id PK
        varchar email UK
        varchar username UK
        varchar display_name
        timestamp created_at
    }

    SERVERS {
        uuid id PK
        varchar name
        uuid owner_id FK
        boolean is_public
    }

    CHANNELS {
        uuid id PK
        uuid server_id FK
        varchar name
        int type "TEXT (0) or VOICE (1)"
        uuid category_id FK
    }

    MESSAGES {
        uuid id PK
        uuid channel_id FK
        uuid author_id FK
        text content
        jsonb attachments
        timestamp created_at
    }

    SERVER_MEMBERS {
        uuid server_id PK, FK
        uuid user_id PK, FK
        varchar nickname
        timestamp joined_at
    }

    ROLES {
        uuid id PK
        uuid server_id FK
        varchar name
        int color
        bigint permissions "Bitfield"
        int position
    }

    USERS ||--o{ SERVERS : "owns"
    SERVERS ||--|{ CHANNELS : "contains"
    CHANNELS ||--o{ MESSAGES : "hosts"
    USERS ||--o{ MESSAGES : "authors"
    SERVERS ||--|{ SERVER_MEMBERS : "has"
    USERS ||--o{ SERVER_MEMBERS : "joins"
    SERVERS ||--o{ ROLES : "defines"
